@@ -11,6 +11,11 @@ Flow.SetIntroImagePath("Screens\\main.jpg")
 
 Flow.SetTitleScreenImagePath("Screens\\main.jpg")
 
+-- Set overall amount of secrets in game.
+-- If set to 0, secrets won't be displayed in statistics.
+
+Flow.SetNumberOfSecrets(5)
+
 -- Disable/enable flycheat globally
 
 Flow.EnableFlyCheat(true)
