@@ -5,6 +5,7 @@ Version 1.0.3
 * Add FlipMap and PlayFlyBy script commands and node functions.
 * Add OCB 1 for rollingball to make it silent.
 * Add FlyCheat option to gameflow script for disabling dozy mode.
+* Add SetNumberOfSecrets option to gameflow script to set overall amount of secrets.
 * Adjust sprint jump timing.
 * Increase amount of maximum secrets per level from 8 to 32.
 * Improve game and inventory input handling.
